feat: Upgrade Java version to 17 and spring boot upgrade